--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,9 @@ services:
       args:
         BUILD_VERSION: local
     ports:
-      - 3000:3000
+      - "3000:3000"
     env_file:
-      - ./environments/local.env
-    depends_on:
-      - redis
+      - ./environments/.env
     environment:
       USE_OAUTH2_PROXY: '0'
       OAUTH2_PROXY_PROVIDER: 'github'
@@ -23,18 +21,20 @@ services:
       OAUTH2_PROXY_EMAIL_DOMAINS: '*'
       OAUTH2_PROXY_SCOPE: 'user:email'
       UI: bull-board
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
       PORT: 3000
+
   grafana:
     image: grafana/grafana:latest
     environment:
       GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-simple-json-datasource
-      GF_RENDERING_SERVER_URL: http://renderer:8081/render
+      GF_RENDERING_SERVER_URL: http://grafana-renderer:8081/render
       GF_RENDERING_CALLBACK_URL: http://grafana:3000/
       GF_LOG_FILTERS: rendering:debug
     ports:
-      - 3001:3001
+      - "3001:3001"
     depends_on:
       - prometheus
       - smtp
@@ -43,27 +43,33 @@ services:
       - ./grafana.ini:/etc/grafana/grafana.ini
       - ./grafana_prometheus.yml:/etc/grafana/provisioning/datasources/grafana_prometheus.yml
       - ./grafana_email.yml:/etc/grafana/provisioning/notifiers/grafana_email.yml
-  # https://github.com/grafana/grafana-image-renderer/issues/48
-  grafana-renderer: # https://grafana.com/docs/grafana/latest/administration/image_rendering/#remote-rendering-service
+
+  grafana-renderer:
     image: grafana/grafana-image-renderer:latest
     ports:
-      - 8081
+      - "8081:8081"
+
   prometheus:
     image: prom/prometheus:latest
     ports:
-      - 3002:9090
+      - "3002:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
   redis:
     image: redis:alpine
     ports:
-      - '6001:6379'
+      - "6001:6379"
+    env_file:
+      - ./environments/.env
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+
   smtp:
     image: mailhog/mailhog:latest
     restart: always
     ports:
-      - 6002:1025 # smtp
-      - 3003:8025 # web ui
+      - "6002:1025" # SMTP
+      - "3003:8025" # Web UI
     environment:
       - MH_AUTH_FILE=/home/mailhog/smtp-auth
     volumes:
